--- a/chrome/player/options/options.css
+++ b/chrome/player/options/options.css
@@ -342,6 +342,7 @@ button:focus-visible {
 
 .video-option .number {
   text-align: center;
+  font-variant-numeric: tabular-nums;
   width: 60px;
 }
 
